_headerFW.scss
$z_header : 100;
.headerFW{
  z-index: $z_header;
  font-size: header(font-size); 
  padding: 0;
  width: 100%;
  position: relative;
  &[data-stick=true]{position: sticky; top: -1px; }
  &:not([class*=bg-]){
    background-color: header(background); 
    color: header(font-color); 
  }
  @each $key, $value in $colors{
    &.bg-#{$key}{color: contrastFW(header(font-color),$value);
      .headerFW__search:not([class*=bg-]){
        background: darken($value,15); color: contrastFW(header(font-color),darken($value,15));
      }
      +.headerFW__topbar:not([class*=bg-]),
      .headerFW__lang:not([class*=bg-]){
        background: darken($value,25); color: contrastFW(header(font-color),darken($value,25));
      }
    }
  }

  &.bg-none{
    color: contrastFW(header(font-color),body(background));
    .headerFW__search:not([class*=bg-]){
      background: darken(body(background),15); color: contrastFW(header(font-color),darken(body(background),15));
    }
    +.headerFW__topbar:not([class*=bg-]),
    .headerFW__lang:not([class*=bg-]){
      background: darken(body(background),25); color: contrastFW(header(font-color),darken(body(background),25));
    }
    .headerFW__nav__panel{background: body(background);}
  }
  

  // global appearance
  &.bottom--border{border-bottom: $border-default-size solid rgba($border-default-color,0.15);}
  &.bottom--shadow{box-shadow: 0 10px 10px 0px rgba(0,0,0,0.15);}

  // nav links hover appearance
  &.hover--underline{
    .headerFW__nav__inline li{
      &.active, &.trail, &:hover{
        >*:not(ul){text-decoration: underline;}
      }
    }
    .headerFW__nav__panel li{
      &.active, &.trail, &:hover{
        >*:not(ul):not(.toggler){text-decoration: underline;}
      }
    }
  }
  &.hover--background{
    .headerFW__nav__inline{
      >ul>li{
        &.active, &.trail, &:hover{
          >*:not(ul){
            @if lightness(header(background)) > 60{ 
              background: darken(header(background),10);
              // background: darken(body(block-background),10); 
            } 
            @else { 
              background: lighten(header(background),10);
              // background: lighten(body(block-background),10);
            }
          }
        }
      }
      ul ul li{
        &.active, &.trail, &:hover{
          >*:not(ul){background: darken(body(block-background),5);}
        }
      }
    }
    .headerFW__nav__panel{
      >ul>li{
        &.active, &.trail, &:hover{background: darken(body(block-background),5);}
      }
    }
    @each $key, $value in $colors{
      &.bg-#{$key}{
        .headerFW__nav__inline{ color: contrastFW(header(font-color),$value);
          >ul>li{
            &.active, &.trail, &:hover{
              >*:not(ul){
                @if lightness($value) > 60{background: darken($value,7); }
                @else {background: lighten($value,7); }
              }
            }
          }
        }
        .headerFW__nav__panel{
          >ul>li{
            &.active, &.trail, &:hover{
              @if lightness($value) > 60{background: darken($value,7); }
              @else {background: lighten($value,7); }
            }
          }
        }
      } 
    }
    &.bg-none{
      .headerFW__nav__inline{color: contrastFW(header(font-color),body(background));
        >ul>li{
          &.active, &.trail, &:hover{
            >*:not(ul){
              @if lightness(body(background)) > 60{background: darken(body(background),7); }
              @else {background: lighten(body(background),7); }
            }
          }
        }
      }
      .headerFW__nav__panel{
        >ul>li{
          &.active, &.trail, &:hover{
            @if lightness(body(background)) > 60{background: darken(body(background),7); }
            @else {background: lighten(body(background),7); }
          }
        }
      }
    } 
  }

  &.nav--left{
    .headerFW__nav__inline{margin-right: auto;}
  }
  &.nav--center{
    .headerFW__nav__inline{margin-right: auto; margin-left: auto;}
  }

  // nav state
  // &.is-open{position: fixed; top: -1px; }
  &.is-reduce{
    .headerFW__nav__panel{display: flex;}
    .headerFW__nav__inline{display: none;}
    .headerFW__logo__wrapper{flex-shrink: 1;}
  }
  &.is-reduce,
  &.is-open{
    .headerFW__nav__toggler {visibility: visible;opacity: 1;display: block;}
  }
  &.is-open,
  &.is-reduce,
  &.is-pinned{
    .headerFW__logo__wrapper{max-height: 100px;}
  }
  &.is-pinned{ border-top: 1px solid transparent;}
  &.active{
    .loader{opacity: 0;visibility: hidden;pointer-events: none;}
  } 
  &:not(.active){
    .headerFW__nav__wrapper{opacity: 0; visibility: hidden; pointer-events: none;}
  }

  // misc elements
  .loader{background: none; transition: opacity 0.4s; opacity: 0.6;}
  strong{font-weight: inherit;}
  a,a:hover{color: inherit; text-decoration: none;}
}
.headerFW__wrapper{display: flex;justify-content: space-between; 
  background: inherit;
}
.headerFW__logo__wrapper{display: flex; max-height: 120px; z-index: 1; flex-shrink: 0;
  // transition: all 0.15s;
  img{max-height: 100%;}
}
.headerFW__logo{display: block; font-size: 1em;padding: 1em;margin: 0;flex-shrink: 0; }
.headerFW__catchline{padding: 0.75em 1em; align-self: center;padding-left: 0; margin-left: -0.25em; }
.headerFW__nav__wrapper{display: flex; flex-grow: 1; justify-content: flex-end; transition: opacity 0.4s; background: inherit;
  ul{list-style: none; padding: 0;margin: 0;
    &:before,:after{display: none;}
  }
}
.headerFW__nav__inline{ white-space: nowrap;
  >ul{height: 100%; display: grid; grid-auto-flow: column; grid-auto-columns: minmax(12ch,auto);
    >li{height: 100%; 
      >*:not(ul){width: 100%;height: 100%;display: flex;align-items: center;justify-content: center; padding: 1em 1.25em; transition: all 0.5s;}
    }
  }
  li{position: relative;
    ul{
      position: absolute; 
      top: 100%; 
      box-shadow: 0px 0px 10px 5px rgba(0,0,0,.15);
      opacity: 0;
      visibility: hidden;
      transition: all .4s,transform 0.4s;
      background: body(block-background);
      color:  contrastFW(body(font-color),body(block-background));
      li{
        &:nth-of-type(2n){background: rgba(0,0,0,0.035);}
        >*:not(ul){padding: 0.5em 1.25em 0.75em; display: block;}
      }
      &:hover{
        opacity: 1;
        visibility: visible;
      }
    }
    &:hover>ul{
      opacity: 1;
      visibility: visible;
    }
  }
  li ul ul{top: 0; left: 100%;
    &.offset-right{left: auto; right: 100%;
      ul{left: auto; right: 100%;}
    }
  }
}
.chevron{cursor: pointer; padding: 0; position: relative; display: inline-flex; justify-content: center; align-items: center; font-size: 1em; width: 2.35em; height: 2.35em;
  &:before{
    content: "";
    display: block;
    border: 0.25em solid currentColor;
    border-bottom-right-radius: 2px;
    border-left: 0;
    border-top: 0;
    bottom: 0;
    height: 1em;
    width: 1em;
    transform: rotate(-45deg);
    transition: all .4s;
    border-bottom-right-radius: 0.125em;
  }
  &.left:before{transform: rotate(135deg);}
}
.headerFW__nav__panel{
  display: none;
  position: absolute;
  top: 100%;
  left: 0;
  width: 80%;
  width: clamp(80%,600px,100%);
  height: 80vh;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  background: body(block-background);
  color:  contrastFW(body(font-color),body(block-background));
  transition: transform 0.6s,height 0.4s;
  transform: translate3d(-105%,0,0);
  z-index: -1;
  box-shadow: 0 0 10px 10px rgba(0,0,0,0.2);
  // &:before{content: "";position: absolute; top: 0;left: 0;width: 100vw; height: 100%;background: rgba(0,0,0,0.1);}
  &.active{transform: translate3d(0,0,0);}
  .headerFW.panel--right &{
    transform: translate3d(105%,0,0); left: auto; right: 0;
    &.active{transform: translate3d(0,0,0);}
  }
  ul.panel__item{
    position: relative;
    display: flex;
    flex-direction: column;
    list-style: none;
    padding: 0;
    width: 100%;
    margin: 0;
    pointer-events: none;
    transition: all 0.8s;
    overflow: auto;
    flex-grow: 1;
    background: inherit;
    height: 0; opacity: 0; visibility: hidden;
    &.active{opacity: 1; visibility: visible; height: 100%; pointer-events: all;}
    li{ position: relative; display: flex;justify-content: space-between;align-items: center;
      &:nth-of-type(2n){background: rgba(0,0,0,0.035);}
      >*:not(ul):not(.toggler){min-width: 200px; display: block;padding: 0.75em 1.25em ;}
      &>.toggler{ padding: 0; width: 3em; opacity: .35; transition: all .4s;
        &:before{transform: translateX(-8px) rotate(-45deg); }
        &:hover{opacity: 1;}
      }
    }
  }
  .panel__title{padding: 0.75em 1.25em;  cursor: pointer; position: sticky; top: 0; background: inherit; z-index: 1;
    &:before{content:"";position: absolute;top: 0;left: 0;width: 100%;height: 100%;background: rgba(0,0,0,0.035); z-index: -1;}
    span{font-size: 1.35em;font-style: italic; font-weight: 300;}
    .chevron{opacity: 0.35;}
  }
  .panel__actions{margin: auto 0 0; display: flex; align-items: center; position: sticky; bottom: 0; background: inherit;
    >*{flex-grow: 1; flex-basis: 0;}
    .back{background: rgba(0,0,0,0.5); color:white; padding: 0.8em 1.75em 1em; display: flex; justify-content: center;align-items: center; cursor: pointer;
      span{line-height: 1; font-size: 1.35em ; font-weight: 300; font-style: italic;}
      .chevron{opacity: 0.6;}
    }
  }
  &:not(.active){
    .panel__actions{pointer-events: none; visibility: hidden;}
  }
}

.headerFW__nav__toggler{
  display: none;
  flex-shrink: 0;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.6s;
  height: 60px;
  cursor: pointer;
  width: 40px;
  margin: auto 1.75em;
  transform-style: preserve-3d;
  transform: translate3d(0, 0, 0);
  @include media-max(xxs){ margin: auto 0.5em; width: 35px; }
  & .bar{
    height: 4px; width: 100%; background: currentColor; border-radius: 10px; transition: all 0.4s; position: absolute;transform: translate3d(0,0,0);
    &:nth-child(1){top: 14px; @include media-max(xxs){top: 16px;} }
    &:nth-child(2){top: 28px}
    &:nth-child(3){top: 42px; @include media-max(xxs){top: 40px;}}
  }
  &.active .bar{
    &:nth-child(1){top: 28px;transform: rotate3d(0,0,1,-45deg);}
    &:nth-child(2){opacity: 0;}
    &:nth-child(3){top: 28px;transform: rotate3d(0,0,1,45deg);}
  }
}


.headerFW__search{ transition: all 0.5s; position: relative; display: flex;align-items: center; justify-content: center; padding: 1em 1.75em;
  &:not([class*=bg-]){
    background: darken(header(background),15); color: contrastFW( header(font-color),darken(header(background),15));
  }
  &:not(.active){}
  .btn#{$exclude}{color: inherit;
    &:hover,&:focus{color: inherit;}
  }
}
.headerFW__search__field{margin: 0;
  &:focus-within{
    label{display: none !important;}
    input[type=text]{width: clamp(150px,15vw,400px);}
  }
  &:not(:focus-within){
    input[type=text]{width: 0; padding-left: 0;padding-right: 0; border-left-width:0; border-right-width: 0;
      +.btn{display: none;}
    }
  }
}
.headerFW__search__input{}

.headerFW__lang{ padding: 1em 1.75em; display: flex;align-items: center;justify-content: center; position: relative;
  &:not([class*=bg-]){
    background: darken(header(background),25); color: contrastFW( header(font-color),darken(header(background),25));
  }
}
.headerFW__postnav{position: relative; display: flex;align-items: center; justify-content: center; padding: 1em 1.25em; }
.headerFW__topbar{padding: 0.5em 0.75em 0.55em; font-size: 0.85em; order:-1;
  &:not([class*=bg-]){
    background: darken(header(background),25); color: contrastFW( header(font-color),darken(header(background),25));
  }
}

